Dark mode: Brighten selection, fix search bar color

--- a/Notes First.less
+++ b/Notes First.less
@@ -23,8 +23,8 @@
 @dark-guide-line-color-percent: 0%;
 @dark-handle-expanded-color-percent: 10%;
 @dark-handle-collapsed-color-percent: 80%;
-@dark-selection-color-percent: 20%;
-@dark-searchbar-background-color: mix(@tint-color, rgb(20%, 20%, 20%), 15%);
+@dark-selection-color-percent: 30%;
+@dark-searchbar-background-color: #2D2F35;
 
 // Current Appearance Colors
 @current-appearance-text-color: "@{appearance}-text-color";
